// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `null`;

exports[`2. a single child element 1`] = `
<View>
  <View>
    <View>
      <Text>
        standard-1
      </Text>
    </View>
  </View>
</View>
`;

exports[`3. two child elements 1`] = `
<View>
  <View>
    <View>
      <Text>
        standard-1
      </Text>
    </View>
  </View>
  <View>
    <View>
      <Text>
        standard-2
      </Text>
    </View>
  </View>
</View>
`;

exports[`4. three child elements 1`] = `
<View>
  <View>
    <View>
      <Text>
        standard-1
      </Text>
    </View>
  </View>
  <View>
    <View>
      <Text>
        standard-2
      </Text>
    </View>
  </View>
  <View>
    <View>
      <Text>
        standard-3
      </Text>
    </View>
  </View>
</View>
`;
